--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ jobs:
   build:
     strategy:
       matrix:
-        pg: [16, 15, 14, 13]
+        pg: [16, 15, 14, 13, 12]
     name: 🐘 PostgreSQL ${{ matrix.pg }}
     runs-on: ubuntu-latest
-    container: pgxn/pgxn-tools
+    container:
+      image: pgxn/pgxn-tools
+      options: -e AS_USER=pgtest
     steps:
       - run: pg-start ${{ matrix.pg }}
       - uses: actions/checkout@v4
