--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - run: env
       - run: cat /etc/passwd
+      - run: cat /etc/sudoers
       - run: AS_USER=pg_test /usr/local/bin/entrypoint.sh 
       - run: pg-start ${{ matrix.pg }}
       - uses: actions/checkout@v4
