--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - run: env
       - run: cat /etc/passwd
       - run: cat /etc/sudoers
-      - run: AS_USER=pg_test /usr/local/bin/entrypoint.sh 
       - run: pg-start ${{ matrix.pg }}
       - uses: actions/checkout@v4
-      - run: gosu pg_test pg-build-test
+      - run: chown -R postgres:postgres .
+      - run: gosu postgres pg-build-test
