--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,9 @@ jobs:
         pg: [16, 15, 14, 13, 12]
     name: 🐘 PostgreSQL ${{ matrix.pg }}
     runs-on: ubuntu-latest
-    container:
-      image: pgxn/pgxn-tools
-      options: -e AS_USER=pgtest
+    container: pgxn/pgxn-tools
     steps:
       - run: pg-start ${{ matrix.pg }}
       - uses: actions/checkout@v4
-      - run: pg-build-test
+      - run: chown -R postgres:postgres .
+      - run: gosu postgres pg-build-test
